# f5xc-marketplace

./: .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  plugins.json  pyproject.toml  sitemap.xml
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/config/: repo-settings.json
.github/workflows/: docs.yml  plugin-sync.yml  release.yml  require-linked-issue.yml  validate.yml
contributing/: index.html
docs/: contributing.md  contributing.mdx  getting-started.md  getting-started.mdx  index.md  index.mdx  plugin-automation.md  plugin-automation.mdx  roadmap.md  roadmap.mdx  troubleshooting.md  troubleshooting.mdx
docs/plugins/: f5xc-console.mdx  index.mdx
docs/stylesheets/: extra.css
getting-started/: index.html
includes/abbreviations/: index.html
overrides/: main.html
plugin-automation/: index.html
plugins/: index.html
plugins/f5xc-chrome/: index.html
plugins/f5xc-console/: index.html
roadmap/: index.html
schemas/: marketplace.schema.json  plugins.schema.json
scripts/: generate-plugin-docs.py  plugin-manager.sh  pre-commit-local.sh  sync-npm-plugins.sh
search/: search_index.json
stylesheets/: extra.css
troubleshooting/: index.html
