[project]
name = "f5-distributed-cloud-marketplace"
version = "0.1.0"
description = "F5 Distributed Cloud Plugin Marketplace for Claude Code"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Robin Mordasiewicz", email = "robin@mordasiewicz.com" }]

[tool.ruff]
target-version = "py312"
line-length = 100
fix = false

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # ruff-specific
    "ANN",    # flake8-annotations
    "S",      # flake8-bandit (security)
]
ignore = [
    "S603",   # subprocess without shell=True check - acceptable for controlled scripts
    "S607",   # partial path to executable - acceptable for system commands
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T201"]  # Allow print statements in scripts

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
